# TeaCareAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  HelloWorld.py  README.md  Tea Disease Identifier.py  Tea_Disease_Identifier.py  app.py  auth.py  bootstrap.py  check_constraints.py  config.py  controller.py  create_tables.sql  datagen.py  db.py  db_credentials.py  disease_list.txt  docker-compose.yml  docker_requirements.txt  eval_v2.py  feature_columns.pkl  init_db.py  input_data.sql  leaf_evaluator.py  main.py  model_performance.py  output.json  pre-processing.ipynb  predict.py  predict_v2.py  pyproject.toml  rag.py  rag_log.csv  recovery_model.h5  report_gegerator.ipynb  requirements.txt  requirements_cuda.txt  scaler.pkl  (+9 more)
app/database/: db.py  init_db.py
app/services/: leaf_verifier.py  recovery_tracker.py  tea_disease_identifier.py  treatment_recommendations.py
data/: health_tracker_dataset.xlsx  tea_health_dataset.xlsx  tea_health_tracker.xlsx  tea_leaf_recovery_dataset.csv  tea_leaf_recovery_v3.csv  treatments_data.xlsx
data_folder/: input.json
diagrams/: Conceptual Diagram.drawio  Logical.drawio
init_db/: init_db.py  test_data.sql  test_db.py
model/: generator_evaluation.py  output.json  rag.py  rag_log.csv  rag_version_2.py  retriever_correctness.py  truthfulness.py
scripts/: pre-processing.ipynb  testing.py  train_model.py
static/css/: about.css  add_field.css  analyze.css  header.css  hero.css  index.css  login.css  (+4 more)
templates/: about.html  add_field.html  analayze.html  base.html  index.html  login.html  signup.html  user_manual.html
(+9 files in other folders)
