[project]
name = "teacareai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "protobuf>=3.19.0",
    "psycopg2>=2.9.11",
    "requests>=2.33.1",
    "tensorflow>=2.21.0",
    "ultralytics>=8.4.33",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "sentence-transformers>=5.3.0",
    "chromadb>=1.5.5",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "openpyxl>=3.1.5",
    "clip",
    "ftfy>=6.3.1",
    "regex>=2026.4.4",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
